--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.ant-table-cell.ant-table-row-expand-icon-cell {
+  z-index: 100;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
